kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-api-service
  namespace: home
spec:
  selector:
    app: home-api

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP

  type: ClusterIP
